# CPP_Template

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  build_manual.yml
Sources/: main.cpp
